--- a/test/src/layout.mustache
+++ b/test/src/layout.mustache
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>{{title}}</title>
+  <title>{{titletag}}</title>
 </head>
 <body>
   <div class="content">
