added subfolder functionality for pages and special layouts for subfolders

--- a/test/src/layout-subproject1.mustache
+++ b/test/src/layout-subproject1.mustache
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
 	<title>{{titletag}}</title>
 </head>
 <body>
 	<div class="content">
-		<h1>Main Page Layout</h1>
+		<h3>Subproject1 Page Layout</h3>
 		{{>content}}
 	</div>
 </body>
