added sub.sub... folder feature

--- a/test/src/pages/subproject2/index.mustache
+++ b/test/src/pages/subproject2/index.mustache
@@ -2,4 +2,5 @@
 <p>{{hi}}</p>
 {{>partial}}
 <p>subproject2 demo text</p>
+<a href="evensubbier/info.html">another subfolder</a>
 <a href="../default.html">back to overview</a>
